<resources>
    <string name="app_name">SeraQchove</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">ENTRAR</string>
    <string name="user_hint">Digite seu usuário&#8230;</string>
    <string name="passw_hint">Digite sua senha&#8230;</string>
    <string name="nao_cadastrado">Ainda não possui uma conta?</string>
    <string name="cadastrese"><u>Cadastre-se</u></string>
    <string-array name="countries" />
</resources>